--- a/templates/form.html
+++ b/templates/form.html
@@ -5,17 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NER Extractor</title>
+    <link rel="stylesheet" type="text/css" href="/static/style.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
-            padding: 20px;
-            background-color: #f0f0f0;
         }
         .container {
             width: 50%;
             margin: 0 auto;
-            padding: 20px;
             background-color: #fff;
             border-radius: 5px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
