--- a/templates/form.html
+++ b/templates/form.html
@@ -57,6 +57,7 @@
             <input type="submit"/> 
             <input type="button" value="Clear Text" onclick="document.getElementById('msg').value='';"/>
         </form>
+        <p>Result: {{result}}</p>
     </div>
 </body>
 </html>
