--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <title>NER Extractor</title>
-    <link rel="stylesheet" type="text/css" href="/static/style.css">
+    <link rel="stylesheet" type="text/css" href="static/style.css">
 </head>
 <body>
     <div class="container">
-        <h1>What is Named Entity Recognition (NER)?</h1>
+        <h2>What is Named Entity Recognition (NER)?</h2>
         <p>NER is a type of natural language processing that categories
         information in text known as named entities. These entities typically refer
         to people, places, and things. This app uses a pre-trained model from spaCy,
