--- a/static/style.css
+++ b/static/style.css
@@ -83,3 +83,27 @@ button {
 button:hover {
   background-color: #0056b3;
 }
+
+/* Table styles */
+table {
+  width: 60%;
+  border-collapse: collapse;
+  margin: 0 auto;
+  margin-bottom: 20px;
+    padding: 10px;
+}
+
+th, td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+  font-size: 12px;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+tr.highlight {
+  background-color: #ffffcc; /* Light yellow background color */
+}
