--- a/templates/form.html
+++ b/templates/form.html
@@ -7,42 +7,7 @@
     <title>NER Extractor</title>
     <link rel="stylesheet" type="text/css" href="static/style.css">
     <style>
-        body {
-            margin: 0;
-        }
-        .container {
-            width: 50%;
-            margin: 0 auto;
-        }
-        h1 {
-            text-align: center;
-        }
-        label, textarea {
-            display: block;
-            margin-bottom: 10px;
-        }
-        textarea {
-            width: auto;
-            min-width: 100%; /* minimum width */
-            max-width: 100%; /* maximum width */
-            height: auto;
-            min-height: 150px;
-            padding: 10px;
-            font-size: 14px;
-            border: 1px solid #ccc;
-            border-radius: 3px;
-        }
-        input[type="submit"] {
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 3px;
-            cursor: pointer;
-        }
-        input[type="submit"]:hover {
-            background-color: #0056b3;
-        }
+
     </style>
 </head>
 <body>
@@ -59,6 +24,8 @@
             <input type="submit" value="Submit"> 
             <input type="button" value="Clear Text" onclick="document.getElementById('msg').value='';"/>
         </form>
+        <a href="/" class="button">Return to Index</a>
     </div>
+    
 </body>
 </html>
