--- a/templates/form.html
+++ b/templates/form.html
@@ -21,11 +21,15 @@
             <input type="radio" id="targeted" name="style" value="targeted">
             <input type="hidden" name="options" value="">
             <label for="targeted">Targeted Extracted Entities</label><br>-->
+            <input type="radio" id="extract" name="action" value="extract" checked>
+            <label for="extract">Extract Entities</label><br>
+            <input type="radio" id="visualize" name="action" value="visualize">
+            <label for="visualize">Visualize Network</label><br>   
             <input type="submit" value="Submit"> 
             <input type="button" value="Clear Text" onclick="document.getElementById('msg').value='';"/>
         </form>
         <a href="/" class="button">Return to Index</a>
     </div>
-    
+
 </body>
 </html>
