--- a/static/style.css
+++ b/static/style.css
@@ -130,3 +130,19 @@ tr.highlight {
   background-color: #ffffcc; /* Light yellow background color */
 }
 
+.back-button {
+  padding: 10px 20px;
+  background-color: #999; /* Green */
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.back-button:hover {
+  background-color: #333; /* Darker green on hover */
+}
